fixing spacing between services

--- a/js/pcfsizer.css
+++ b/js/pcfsizer.css
@@ -61,7 +61,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 
 
 @media print {
-  
+
   body * {
     visibility: hidden;
   }
@@ -81,4 +81,11 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     left: 0;
     top: 0;
   }
+}
+
+.margin-top-10 {
+  margin-top: 10px;
+}
+.margin-bottom-20 {
+  margin-bottom: 20px;
 }
